wayland: Only set decoration palette once for each change

Because we filter events on the app, we receive palette change events for
every widget and item, each causing a setPalette call for every window
which can eventually overflow the wayland connection buffer.
BUG:468408
FIXED-IN:5.27.5